src/components/top-bar/index.scss
@import '../../containers/app/variables';

nav.navbar {
  background-color: $background-darkblue;
  color: $background-grey;
  border-bottom: 10px solid $primary;
  font-size: 25px;

  img.rc-circle {
    margin-left: 20px;
    margin-right: 20px;
    max-height: 2.5rem;
  }

  .navbar-end,
  .navbar-link,
  .navbar-dropdown,
  .navbar-item,
  .navbar-item.has-dropdown,
  .navbar-item.is-hoverable {
    background-color: $background-darkblue;
    color: #FFF;
    border: none;
    user-select: none;
    font-size: 18px;
    cursor: pointer;

    .navbar-item:hover{
       background-color: #1f2b37;
      color: #FFF;
    }

    &.is-active, &:hover {
      background-color: #1f2b37;
      color: #FFF;

      .navbar-link{
        background-color: #1f2b37;
        color: #FFF;
      }
    }
  }

  div.navbar-brand {
    a.navbar-item {
      font-size: 22px;
      font-weight: bold;
    }
  }

  svg.fa-chevron-down {
    position: relative;
    top: 2px;
    margin-left: 10px;
  }
}

